--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+button:disabled {
+  opacity: 0.8;
+  cursor: not-allowed;
+}
