--- a/app/globals.css
+++ b/app/globals.css
@@ -17,12 +17,7 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
   background: var(--background);
@@ -33,4 +28,9 @@ body {
 button:disabled {
   opacity: 0.8;
   cursor: not-allowed;
+}
+
+html.light {
+  --background: #ffffff;
+  --foreground: #171717;
 }
